# shop-django

./: .gitignore  Dockerfile  Procfile  README.md  db.json  db.sqlite3  fixtures.json  install-poetry.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
account/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/registration/: base.html  login.html  register.html  register_done.html
article/: admin.py  apps.py  models.py  views.py
article/migrations/: 0001_initial.py
cart/: admin.py  apps.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py
cart/templates/: cart.html
catalog/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_auto_20210412_1142.py  0002_auto_20210415_2201.py  0003_auto_20210412_1142.py  0003_auto_20210415_2208.py
catalog/templates/: catalog.html
catalog/templates/catalog/: catalog.html  catalog_list.html  catalog_menu.html  product_detail.html  product_list.html
catalog/templatetags/: catalog_extras.py
config/: settings.py  urls.py
diplom_django_netology/: asgi.py  settings.py  urls.py  wsgi.py
settings/: local.py
shop/: views.py
templates/: base.html  footer.html  index.html  menu.html
templates/account/: base.html  login.html  register.html
templates/cart/: add_to_cart.html  cart.html
templates/catalog/: catalog_menu.html  product_detail.html  product_list.html
templates/registration/: login.html  register.html
