[tool.poetry]
name = "shop-django"
version = "0.1.0a"
description = "Интернет-магазин на фреймворке Django"
authors = ["KAnanev <russrage@yandex.ru>"]
license = ""

[tool.poetry.dependencies]
python = "^3.8.5"
Django = "^3.2.23"
django-mptt = "^0.12.0"
Pillow = "^9.3"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
python-dotenv = "^1.0.0"


[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.2"
django-debug-toolbar = "^3.2.1"

[tool.poetry.scripts]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
